[package]
name = "command"
version = "0.1.0"
authors = ["Sebastian Waisbrot <seppo0010@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.13", features = ["full"] }

[dependencies.compat]
path = "../compat"

[dependencies.config]
path = "../config"

[dependencies.database]
path = "../database"

[dependencies.logger]
path = "../logger"

[dependencies.parser]
path = "../parser"

[dependencies.response]
path = "../response"

[dependencies.util]
path = "../util"
